--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PW_Lab1.MainWindow"
-        Title="PW_Lab1"
+        Title="PW Lab1"
         Width="640"
         Height="360">
     <StackPanel Margin="20" Spacing="10">
